@@ -72,10 +72,11 @@ name|JdbcActionBuilder
 block|{
 comment|/** 	 * Stores the major version of the database. 	 * 	 * @since 4.2 	 */
 specifier|private
+specifier|final
 name|Integer
 name|version
 decl_stmt|;
-comment|/** 	 * @since 4.0 	 */
+comment|/** 	 * @param dataNode current data node 	 * @since 4.0 	 */
 specifier|public
 name|SQLServerActionBuilder
 parameter_list|(
@@ -83,10 +84,35 @@ name|DataNode
 name|dataNode
 parameter_list|)
 block|{
+name|this
+argument_list|(
+name|dataNode
+argument_list|,
+literal|null
+argument_list|)
+expr_stmt|;
+block|}
+comment|/** 	 * @param dataNode current data node 	 * @param version database server version 	 * @since 4.2 	 */
+specifier|public
+name|SQLServerActionBuilder
+parameter_list|(
+name|DataNode
+name|dataNode
+parameter_list|,
+name|Integer
+name|version
+parameter_list|)
+block|{
 name|super
 argument_list|(
 name|dataNode
 argument_list|)
+expr_stmt|;
+name|this
+operator|.
+name|version
+operator|=
+name|version
 expr_stmt|;
 block|}
 annotation|@
@@ -100,8 +126,7 @@ name|query
 parameter_list|)
 block|{
 comment|// check run strategy...
-comment|// optimistic locking is not supported in batches due to JDBC driver
-comment|// limitations
+comment|// optimistic locking is not supported in batches due to JDBC driver limitations
 name|boolean
 name|useOptimisticLock
 init|=
@@ -173,34 +198,6 @@ argument_list|>
 name|query
 parameter_list|)
 block|{
-if|if
-condition|(
-name|query
-operator|.
-name|getOrderings
-argument_list|()
-operator|==
-literal|null
-operator|||
-name|query
-operator|.
-name|getOrderings
-argument_list|()
-operator|.
-name|size
-argument_list|()
-operator|==
-literal|0
-operator|||
-name|version
-operator|==
-literal|null
-operator|||
-name|version
-operator|<
-literal|12
-condition|)
-block|{
 return|return
 operator|new
 name|SQLServerSelectAction
@@ -209,19 +206,10 @@ name|query
 argument_list|,
 name|dataNode
 argument_list|,
-literal|true
+name|needInMemoryOffset
+argument_list|(
+name|query
 argument_list|)
-return|;
-block|}
-return|return
-operator|new
-name|SQLServerSelectAction
-argument_list|(
-name|query
-argument_list|,
-name|dataNode
-argument_list|,
-literal|false
 argument_list|)
 return|;
 block|}
@@ -242,8 +230,33 @@ argument_list|>
 name|query
 parameter_list|)
 block|{
-if|if
-condition|(
+return|return
+operator|new
+name|SQLServerSelectAction
+argument_list|(
+name|query
+argument_list|,
+name|dataNode
+argument_list|,
+name|needInMemoryOffset
+argument_list|(
+name|query
+argument_list|)
+argument_list|)
+return|;
+block|}
+specifier|private
+name|boolean
+name|needInMemoryOffset
+parameter_list|(
+name|SelectQuery
+argument_list|<
+name|?
+argument_list|>
+name|query
+parameter_list|)
+block|{
+return|return
 name|query
 operator|.
 name|getOrderings
@@ -268,55 +281,45 @@ operator|||
 name|version
 operator|<
 literal|12
-condition|)
-block|{
-return|return
-operator|new
-name|SQLServerSelectAction
-argument_list|(
-name|query
-argument_list|,
-name|dataNode
-argument_list|,
-literal|true
-argument_list|)
 return|;
 block|}
-return|return
-operator|new
-name|SQLServerSelectAction
-argument_list|(
-name|query
-argument_list|,
-name|dataNode
-argument_list|,
-literal|false
-argument_list|)
-return|;
-block|}
-specifier|public
-name|Integer
-name|getVersion
-parameter_list|()
-block|{
-return|return
-name|version
-return|;
-block|}
-specifier|public
-name|void
-name|setVersion
+specifier|private
+name|boolean
+name|needInMemoryOffset
 parameter_list|(
-name|Integer
-name|version
+name|FluentSelect
+argument_list|<
+name|?
+argument_list|>
+name|query
 parameter_list|)
 block|{
-name|this
+return|return
+name|query
 operator|.
+name|getOrderings
+argument_list|()
+operator|==
+literal|null
+operator|||
+name|query
+operator|.
+name|getOrderings
+argument_list|()
+operator|.
+name|size
+argument_list|()
+operator|==
+literal|0
+operator|||
 name|version
-operator|=
+operator|==
+literal|null
+operator|||
 name|version
-expr_stmt|;
+operator|<
+literal|12
+return|;
 block|}
 block|}
 end_class
