@@ -31,7 +31,43 @@ name|sqlbuilder
 operator|.
 name|sqltree
 operator|.
-name|*
+name|LimitOffsetNode
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|access
+operator|.
+name|sqlbuilder
+operator|.
+name|sqltree
+operator|.
+name|Node
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|access
+operator|.
+name|sqlbuilder
+operator|.
+name|sqltree
+operator|.
+name|NodeType
 import|;
 end_import
 
@@ -49,52 +85,44 @@ name|sqlserver
 operator|.
 name|sqltree
 operator|.
-name|SQLServerColumnNode
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|cayenne
-operator|.
-name|dba
-operator|.
-name|sybase
-operator|.
-name|SybaseSQLTreeProcessor
+name|SQLServerLimitOffsetNode
 import|;
 end_import
 
 begin_comment
-comment|/**  * @since 4.2  */
+comment|/**  * SQL tree processor that supports OFFSET X ROWS FETCH NEXT Y ROWS ONLY clause  * for the SQLServer 2012 and later.  *  * @since 4.2  */
 end_comment
 
 begin_class
 specifier|public
 class|class
-name|SQLServerTreeProcessor
+name|SQLServerTreeProcessorV12
 extends|extends
-name|SybaseSQLTreeProcessor
+name|SQLServerTreeProcessor
 block|{
 annotation|@
 name|Override
 specifier|protected
 name|void
-name|onColumnNode
+name|onLimitOffsetNode
 parameter_list|(
 name|Node
 name|parent
 parameter_list|,
-name|ColumnNode
+name|LimitOffsetNode
 name|child
 parameter_list|,
 name|int
 name|index
 parameter_list|)
+block|{
+if|if
+condition|(
+name|hasOrderingClause
+argument_list|(
+name|parent
+argument_list|)
+condition|)
 block|{
 name|replaceChild
 argument_list|(
@@ -103,12 +131,104 @@ argument_list|,
 name|index
 argument_list|,
 operator|new
-name|SQLServerColumnNode
+name|SQLServerLimitOffsetNode
 argument_list|(
 name|child
+operator|.
+name|getLimit
+argument_list|()
+argument_list|,
+name|child
+operator|.
+name|getOffset
+argument_list|()
 argument_list|)
+argument_list|,
+literal|false
 argument_list|)
 expr_stmt|;
+return|return;
+block|}
+name|super
+operator|.
+name|onLimitOffsetNode
+argument_list|(
+name|parent
+argument_list|,
+name|child
+argument_list|,
+name|index
+argument_list|)
+expr_stmt|;
+block|}
+specifier|protected
+name|boolean
+name|hasOrderingClause
+parameter_list|(
+name|Node
+name|parent
+parameter_list|)
+block|{
+if|if
+condition|(
+name|parent
+operator|==
+literal|null
+condition|)
+block|{
+return|return
+literal|false
+return|;
+block|}
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|parent
+operator|.
+name|getChildrenCount
+argument_list|()
+condition|;
+name|i
+operator|++
+control|)
+block|{
+if|if
+condition|(
+name|parent
+operator|.
+name|getChild
+argument_list|(
+name|i
+argument_list|)
+operator|.
+name|getType
+argument_list|()
+operator|==
+name|NodeType
+operator|.
+name|ORDER_BY
+condition|)
+block|{
+return|return
+literal|true
+return|;
+block|}
+block|}
+return|return
+name|hasOrderingClause
+argument_list|(
+name|parent
+operator|.
+name|getParent
+argument_list|()
+argument_list|)
+return|;
 block|}
 block|}
 end_class
